--- a/01 Git.ipynb
+++ b/01 Git.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "In this first section, we'll practice the cycle of changing a file, adding it to the list of changes to be committed, and committing it.  We'll get practice with doing it in the terminal and in a VSCode-like IDE. \n",
     "\n",
-    "![image.png](https://miro.medium.com/max/1400/1*J1qnVEUXzoDgROobmjjR_Q.png)\n",
+    "![image.png](imgs/git_cycle.png)\n",
     "\n",
     "\n",
     "## Terminal Commands\n",
