--- a/02 Git.ipynb
+++ b/02 Git.ipynb
@@ -10,7 +10,7 @@
     "What good is version control software, if you can't go back to different versions of your repository?  In this section, we'll talk about git's model of the timeline *(\"branches of commits\")* and how it labels the currently-active commit *(\"the HEAD\")*.  We'll move the head to different commits *(\"checking-out\" a commit)*, add multiple timelines to the project *(\"branching\")*, and merge the changes from those different timelines together back into a single timeline *(\"merging branches\")*.\n",
     "\n",
     "\n",
-    "![git-branches](https://git-scm.com/book/en/v2/images/advance-master.png)\n",
+    "![git-branches](imgs/git-branches.png)\n",
     "\n",
     "## Terminal Commands\n",
     "\n",
