--- a/03 Git.ipynb
+++ b/03 Git.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "What good is keeping tracks of all these versions if we just lose the entire repo by accident, or if we can't put it in a place where others can access it?  In this section, we'll practice telling git where it can send updates to backup repositories *(git remotes)*, sending *(pushing)* new commits to them, and even receiving *(pulling)* new commits on those remotes!  We'll see that GitHub is a useful place to put a git remote, but that we can put a git remote pretty much anywhere, even on other folders in our local computer.\n",
     "\n",
-    "![git remotes](https://miro.medium.com/max/1400/1*E4povWZ5H-K3OaguFQJ0IQ.png)\n"
+    "![git remotes](imgs/git-remotes.png)\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "id": "8c5543ed-77c6-4949-89eb-75bf53fad820",
    "metadata": {},
    "source": [
-    "![funny](https://miro.medium.com/max/1400/1*_UUaozFPd2qHfCFjlhIgGA.png)"
+    "![funny](imgs/funny.png)"
    ]
   },
   {
