--- a/01 Git.ipynb
+++ b/01 Git.ipynb
@@ -24,7 +24,10 @@
     "    - **`git commit -am \"my commit message\"`**: Shortcut: Adds all and Commits, in one step.\n",
     "  - **`git log`**: Checks the log of all past commits.  **To exit the log, press the `q` key.**\n",
     "    - **`git log -1`**: Shortcut, only shows the last one commit.\n",
+    "  - **`git diff`**: Compares the files now to the previous commit, showing any differences.\n",
     "  - **`ls -la` or `ll` or `dir`**: Print all the files in the current folder.  Command depends on operating system.\n",
+    "  - **`git config --global user.name \"My name\"`**: Tell git which name to sign your commits with (only need to do this the first time git is installed)\n",
+    "  - **`git config --global user.email \"myemail@email.com@`**: Tell git which email to sign your commits with (only need to do this the first time git is installed)\n",
     "  \n"
    ]
   },
