--- a/02 Git.ipynb
+++ b/02 Git.ipynb
@@ -16,10 +16,12 @@
     "\n",
     "  - **`git branch`**: Display the list of names of branches in this repository\n",
     "  - **`git branch newbranchname`**: Create a new branch with \"newbranchname\" at the current commit\n",
+    "  - **`git branch -d branchname`**: Delete a branch\n",
     "  - **`git log`**: Checks the log of all past commits.  **To exit the log, press the `q` key.**\n",
     "    - **`git log -1`**: Shortcut, only shows the last one commit.\n",
     "  - **`git checkout branchname`**: Make your workspace match the commit at branchname.  \n",
-    "  - **`git checkout HEAD~1`**: Make your workspace match the commit one step back in time."
+    "  - **`git checkout HEAD~1`**: Make your workspace match the commit one step back in time.\n",
+    "  - **`git merge branchname`**: Merges branchname into the current branch"
    ]
   },
   {
@@ -95,7 +97,7 @@
    "id": "cd23957b-2176-4671-939f-8465121c6180",
    "metadata": {},
    "source": [
-    "6: Take a look at your log.  What commit is the HEAD at?  What commit is the end of the \"stable\" branch at?  What commit is the end of the \"master\" branch at?"
+    "6: Take a look at your log.  What commit is the HEAD at?  What commit is the end of the \"temporary\" branch at?  What commit is the end of the \"master\" branch at?"
    ]
   },
   {
@@ -143,7 +145,7 @@
    "id": "8ff01a2e-63a9-471f-8824-0605f3d9f346",
    "metadata": {},
    "source": [
-    "10: Let's merge the two branches, bringing the changes from one branch into the other.  Merge the stable branch into the master branch.  *(Note: you must be currently on the branch that you want to change)*.  Check the log, are the ends of the two branches at the same commit?  Check the files.  Are they as you expect them to be?"
+    "10: Let's merge the two branches, bringing the changes from one branch into the other.  Merge the \"temporary\" branch into the \"master\" branch.  *(Note: you must be currently on the branch that you want to change)*.  Check the log, are the ends of the two branches at the same commit?  Check the files.  Are they as you expect them to be?"
    ]
   },
   {
